ref: update API requests to remove createdById field
