# pkg/api/v1/message/employee.pb.validate.go
@@ -262,17 +262,6 @@ func (m *CreateEmployeeRequest) validate(all bool) error {
 		errors = append(errors, err)
 	}
 
-	if m.GetCreatedById() <= 0 {
-		err := CreateEmployeeRequestValidationError{
-			field:  "CreatedById",
-			reason: "value must be greater than 0",
-		}
-		if !all {
-			return err
-		}
-		errors = append(errors, err)
-	}
-
 	if len(errors) > 0 {
 		return CreateEmployeeRequestMultiError(errors)
 	}
